--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,14 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<version>3.8.1</version> <!-- 3.8.1 veya daha yeni bir sürüm kullanın -->
+			<configuration>
+				<release>17</release> <!-- Java 17 için -->
+			</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
