--- a/k8s/deployment-svc.yaml
+++ b/k8s/deployment-svc.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mehmetspringboot-deployment
+  namespace: mehmet  
   labels:
     app: mehmetspringboot
 spec:
